Fixed spacing and mobile

--- a/src/assets/styles/pageHeader.css
+++ b/src/assets/styles/pageHeader.css
@@ -12,7 +12,6 @@
 
 @media only screen and (max-width: 700px) {
   .page-header-title {
-    left: 15%;
     line-height: 5px;
   }
 }
